@@ -27,12 +27,15 @@ using std::endl;
 int main ()
 {
   // Assuming path: /reg/d/psdm/mec/mec73313/calib/CsPad2x2::CalibV1/MecTargetChamber.0:Cspad2x2.1/1-end.data
+  // or: /reg/d/psdm/xpp/xpptut13/calib/CsPad2x2::CalibV1/XppGon.0:Cspad2x2.1/pedestals/0-end.data
 
-  //const std::string calibDir   = "/reg/d/psdm/mec/mec73313/calib_xxx"; // to test default pars
   //const std::string calibDir   = "/reg/neh/home1/dubrovin/LCLS/CSPad2x2Alignment/calib-test-calibpars";
-  const std::string calibDir   = "/reg/d/psdm/mec/mec73313/calib";
+  //const std::string calibDir   = "/reg/d/psdm/mec/mec73313/calib";
+  //const std::string calibDir   = "/reg/d/psdm/mec/mec73313/calib_xxx"; // to test default pars
+  const std::string calibDir   = "/reg/d/psdm/xpp/xpptut13/calib";
   const std::string groupName  = "CsPad2x2::CalibV1";
-  const std::string source     = "MecTargetChamber.0:Cspad2x2.1";
+  //const std::string source     = "MecTargetChamber.0:Cspad2x2.1";
+  const std::string source     = "XppGon.0:Cspad2x2.1";
   unsigned long     runNumber  = 10;
 
   cout << "Test of PSCalib::CSPad2x2CalibPars\n";     
